<resources>
    <string name="app_name">My Price Watcher</string>
    <string name="ItemName">Item Name</string>
    <string name="InitialPrice">Inital Price:</string>
    <string name="CurrentPrice">Current Price</string>
    <string name="textCurrentPrice">Current Price:</string>
    <string name="textPercentChange">Percentage Change:</string>
    <string name="URL">URL</string>
    <string name="add">Add</string>
    <string name="visit_website">Visit Website</string>
    <string name="edit_item">Edit Item</string>
    <string name="remove_item">Remove Item</string>
    <string name="itemInList">Item #</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="item_url_hint">Item URL</string>
    <string name="item_name_hint">Item Name</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>