<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <EditText
        android:hint="@string/item_name_hint"
        android:id="@+id/edit_item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:hint="@string/item_url_hint"
        android:id="@+id/edit_item_URL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_item_name"
        android:layout_alignParentStart="true"/>

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_item_URL"
        android:layout_toStartOf="@id/saveButton"
        android:layout_marginTop="0dp"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_below="@id/edit_item_URL"
        android:layout_alignParentEnd="true"
        app:layout_constraintEnd_toEndOf="parent" />

</RelativeLayout>